deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mon-flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mon-flask-app
  template:
    metadata:
      labels:
        app: mon-flask-app
    spec:
      containers:
      - name: mon-flask-app
        image: wydadfulbert/mon-flask-app:latest
        ports:
        - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: mon-flask-app
spec:
  selector:
    app: mon-flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: microservice-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mon-flask-app
spec:
  hosts:
    - "*"
  gateways:
    - microservice-gateway
  http:
    - match:
        - uri:
            prefix: /mon-flask-app/
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 80
            host: mon-flask-app.default.svc.cluster.local
